added image in section-1
.

--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
 
     <!-- Section-1-->
     <div class="section-1">
+        <img src="./Assets/images/section-1/section-1-background-2.png" class="section-1-background-2">
         <div class="container-fluid p-0">
             <div class="d-flex">
                 <div class="col-2">
