--- a/index.html
+++ b/index.html
@@ -1399,7 +1399,7 @@
                         </div>
                     </div>
                     <div class="row-1-socials py-2">
-                        <div class="row">
+                        <div class="d-flex">
                             <button class="btn btn-social">
                                 <i class="fa-brands fa-facebook-f fa-xs"></i>
                             </button>
