--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     <div class="top-bar container-fluid g-0">
         <div class="row">
 
-            <div class="topbar-section-1 d-flex align-items-center col-10">
-                <div class="topbar-info d-flex justify-content-end col-9">
+            <div class="topbar-section-1 d-flex align-items-end col-10">
+                <div class="topbar-info d-flex justify-content-start col-5">
                     <div class="topbar-location px-2">
                         <i class="fa-solid fa-location-dot px-2"></i>
                         3D Commercial Road Fratton, Australia
