--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <button class="btn btn-nav">Team</button>
                     <button class="btn btn-nav">Blog</button>
                 </div>
-                <div class="navbar-section-useful d-flex justify-content-end col-2">
+                <div class="navbar-section-useful d-flex justify-content-center col-2">
                     <button class="btn">
                         <i class="fa-solid fa-magnifying-glass" style="color: #ffffff;"></i>
                     </button>
@@ -93,8 +93,8 @@
                         <i class="fa-solid fa-cart-shopping" style="color: #ffffff;"></i> </button>
                 </div>
             </div>
-            <div class="navbar-section-2 d-flex col-2 ">
-                <div class="navbar-contact-logo d-flex justify-content-end align-items-center col-4">
+            <div class="navbar-section-2 d-flex col-2 p-0">
+                <div class="navbar-contact-logo d-flex justify-content-start align-items-center col-2">
                     <button class="btn">
                         <i class="navbar-contact-logo-icon fa-solid fa-square-phone fa-2xl" style="color: #7a71f5;"></i>
                     </button>
