--- a/index.html
+++ b/index.html
@@ -1498,7 +1498,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-2 mx-3">
+                <div class="col-2 mx-3 px-4">
                     <div class="row-4-title py-2">Gallary</div>
                     <div class="row row-cols-2 g-1">
                         <div class="col gallary-images">
