Detailing in Font Weight and Icons

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="row">
 
             <div class="topbar-section-1 d-flex align-items-center justify-content-end col-10">
-                <div class="topbar-info d-flex justify-content-start col-5">
+                <div class="topbar-info d-flex justify-content-start col-6">
                     <div class="topbar-location px-2">
                         <i class="fa-solid fa-location-dot px-2"></i>
                         3D Commercial Road Fratton, Australia
@@ -47,7 +47,7 @@
                     </div>
                 </div>
 
-                <div class="topbar-social d-flex justify-content-end my-2 col-3" role="group">
+                <div class="topbar-social d-flex justify-content-end my-1 col-2" role="group">
                     <button class="btn btn-social">
                         <i class="fa-brands fa-facebook-f fa-xs"></i>
                     </button>
@@ -87,20 +87,21 @@
                 </div>
                 <div class="navbar-section-useful d-flex justify-content-center col-2">
                     <button class="btn">
-                        <i class="fa-solid fa-magnifying-glass" style="color: #ffffff;"></i>
+                        <img src="./Assets/images/navbar/search-icon.png" style="max-width: 90%;" />
                     </button>
                     <button class="btn">
-                        <i class="fa-solid fa-cart-shopping" style="color: #ffffff;"></i> </button>
+                        <img src="./Assets/images/navbar/card-icon.png" style="max-width: 90%;" /> 
+                    </button>
                 </div>
             </div>
             <div class="navbar-section-2 d-flex col-2 p-0">
                 <div class="navbar-contact-logo d-flex justify-content-start align-items-center col-2">
-                    <button class="btn">
-                        <i class="navbar-contact-logo-icon fa-solid fa-square-phone fa-2xl" style="color: #7a71f5;"></i>
+                    <button class="btn p-1">
+                        <img src="Assets/images/navbar/call-logo.png" style="max-width: 90%"/>
                     </button>
                 </div>
                 <div class="navbar-number d-flex fw-semibold col-9 row">
-                    <div class="d-flex align-items-end">
+                    <div class="navbar-title d-flex align-items-end">
                         Emergency Call
                     </div>
                     <div class="d-flex fs-6 fw-semibold align-items-start">
@@ -120,7 +121,8 @@
                     <div class="row justify-content-center align-items-center" style="height: 100%;">
                         <div class="col-4">
                             <div class="row p-0 justify-content-center">
-                                <div class="swiper-button-prev section-1-btn"></div>
+                                <div class="swiper-button-prev section-1-btn">
+                                </div>
                                 <div class="swiper-button-next section-1-btn"></div>
                             </div>
                         </div>
@@ -274,14 +276,13 @@
                 <div class="col-5">
                     <div class="row">
                         <div class="smallhead">
-                            <i class="fa-solid fa-shield"></i>
                             About Us
                         </div>
-                        <div class="mainhead fs-2 my-2">
+                        <div class="mainhead fs-1 my-2">
                             We're Providing Best </br> Insurance Policy's
                         </div>
                         <div class="description fs-6 my-2">
-                            there are many variations of passages of Lorem Ipsum available, but the majority have
+                            There are many variations of passages of Lorem Ipsum available, but the majority have
                             suffered alteration in some form by injected humour or randomised words which don't
                         </div>
                         <div class="feature my-2">
@@ -342,9 +343,6 @@
                                 <div class="point-text align-items-center mx-2 my-1">
                                     Expert many variations teacher
                                 </div>
-                                <div class="point-text align-items-center mx-2 my-1">
-                                    Many variation of passages of lorem ipsum
-                                </div>
                             </div>
                         </div>
                         <div class="discover-button my-4">
@@ -367,8 +365,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="row">
-                        <div class="smallhead fs-5">
-                            <i class="fa-solid fa-shield"></i>
+                        <div class="smallhead">
                             Services
                         </div>
                         <div class="row">
@@ -423,7 +420,7 @@
                                                                     </div>
                                                                 </div>
                                                             </div>
-                                                            <p class="card-text py-2">There are many variations the
+                                                            <p class="card-text py-4 px-3">There are many variations the
                                                                 off
                                                                 passages of Lorem Ipsum free thing
                                                                 avagtilable, but majority</p>
@@ -462,7 +459,7 @@
                                                                 </div>
                                                             </div>
                                                         </div>
-                                                        <p class="card-text py-2">There are many variations the
+                                                        <p class="card-text py-4 px-3">There are many variations the
                                                             off
                                                             passages of Lorem Ipsum free thing
                                                             avagtilable, but majority</p>
@@ -502,7 +499,7 @@
                                                                 </div>
                                                             </div>
                                                         </div>
-                                                        <p class="card-text py-2">There are many variations the
+                                                        <p class="card-text py-4 px-3">There are many variations the
                                                             off
                                                             passages of Lorem Ipsum free thing
                                                             avagtilable, but majority</p>
@@ -542,7 +539,7 @@
                                                                 </div>
                                                             </div>
                                                         </div>
-                                                        <p class="card-text py-2">There are many variations the
+                                                        <p class="card-text py-4 px-3">There are many variations the
                                                             off
                                                             passages of Lorem Ipsum free thing
                                                             avagtilable, but majority</p>
@@ -580,7 +577,7 @@
                                 <div class="smallhead">
                                     Be Happy to Get Insurance
                                 </div>
-                                <div class="mainhead fs-2">
+                                <div class="mainhead fs-3">
                                     Start Tracking Your Claims
                                 </div>
                             </div>
@@ -589,7 +586,7 @@
                     <div class="col-3">
                         <div class=" d-flex justify-content-center">
                                 <div class="btn">
-                                    <div class="button-text">
+                                    <div class="button-text py-2 px-3 rounded-6">
                                         Discover More
                                     </div>
                                 </div>                      
@@ -608,10 +605,9 @@
                     <div class="row">
                         <div class="info-section">
                             <div class="smallhead">
-                                <i class="fa-solid fa-shield"></i>
                                 Why Choose Us
                             </div>
-                            <div class="mainhead fs-2 my-2">
+                            <div class="mainhead fs-1 my-2">
                                 Why You should choose Our </br> Insurance Policy's
                             </div>
                             <div class="description fs-6 my-2">
@@ -689,12 +685,11 @@
                 <div class="col-12">
                     <div class="row">
                         <div class="text-center">
-                            <div class="smallhead fs-5">
-                                <i class="fa-solid fa-shield"></i>
-                                testomonials
+                            <div class="smallhead">
+                                Testomonials
                             </div>
                             <div class="mainhead fs-1">
-                                See What they are talking </br> About ?
+                                See What they are talking </br> About?
                             </div>
                         </div>
 
@@ -819,8 +814,7 @@
                 <div class="col-12">
                     <div class="row">
                         <div class="text-center">
-                            <div class="smallhead fs-5">
-                                <i class="fa-solid fa-shield"></i>
+                            <div class="smallhead">
                                 Get a Free Estimate
                             </div>
                             <div class="mainhead fs-1">
@@ -1076,8 +1070,7 @@
                 <div class="col-12">
                     <div class="row">
                         <div class="text-center">
-                            <div class="smallhead fs-5">
-                                <i class="fa-solid fa-shield"></i>
+                            <div class="smallhead">
                                 Our Team Members
                             </div>
                             <div class="mainhead fs-1">
@@ -1167,8 +1160,7 @@
                 <div class="col-12">
                     <div class="row">
                         <div class="text-center">
-                            <div class="smallhead fs-5">
-                                <i class="fa-solid fa-shield"></i>
+                            <div class="smallhead">
                                 Articles
                             </div>
                             <div class="mainhead fs-1">
