--- a/index.html
+++ b/index.html
@@ -1138,6 +1138,7 @@
                                                     <h5 class="card-title">Camila mendes</h5>
                                                     <p class="card-text">Developer</p>
                                                 </div>
+
                                             </div>
                                         </div>
                                     </li>
@@ -1453,7 +1454,7 @@
                             <div class="row-2-address py-2">
                                 <div class="row justify-content-center align-items-center">
                                     <div class="col-2">
-                                        <i class="fa-solid fa-phone"></i>
+                                        <img src="./Assets/images/navbar/call-logo.png" />
                                     </div>
                                     <div class="col-6">
                                         <div class="row">
