--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
             <div class="row">
                 <div class="col-2">
                     <div class="row justify-content-center align-items-center" style="height: 100%;">
-                        <div class="col-4">
-                            <div class="row p-0 justify-content-center">
+                        <div class="col-3">
+                            <div class="row p-0 justify-content-center " style="max-height: 20%;">
                                 <div class="swiper-button-prev section-1-btn">
                                 </div>
                                 <div class="swiper-button-next section-1-btn"></div>
