Changes in section-features

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
         <div class="container">
             <div class="d-flex align-items-center">
                 <div class="col-4">
-                    <div class="card border-0 px-3 ">
+                    <div class="card border-0 px-3 py-3">
                         <div class="card-body">
                             <img src="./Assets/images/section-2/card1-icon.png" class="card-img-top my-2" alt="...">
                             <h5 class="card-title py-1">Safe Your Money</h5>
@@ -215,7 +215,7 @@
                     </div>
                 </div>
                 <div class="col-4">
-                    <div class="card border-0 card-center px-3">
+                    <div class="card border-0 card-center px-3 py-4">
                         <div class="card-body">
                             <img src="./Assets/images/section-2/card2-icon.png" class="card-img-top my-2" alt="...">
                             <h5 class="card-title py-1">Get Free Qoute</h5>
@@ -225,7 +225,7 @@
                     </div>
                 </div>
                 <div class="col-4">
-                    <div class="card border-0 px-3">
+                    <div class="card border-0 px-3 py-3">
                         <div class="card-body">
                             <img src="./Assets/images/section-2/card3-icon.png" class="card-img-top my-2" alt="...">
                             <h5 class="card-title py-1">Fast & Reliable</h5>
