changes in the overall design of the application

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
         <div class="row">
 
             <div class="topbar-section-1 d-flex align-items-center justify-content-end col-10">
-                <div class="topbar-info d-flex justify-content-start col-6">
+                <div class="topbar-info d-flex justify-content-start col-7">
                     <div class="topbar-location px-2">
                         <i class="fa-solid fa-location-dot px-2"></i>
-                        3D Commercial Road Fratton, Australia
+                        30 Commercial Road Fratton, Australia
                     </div>
                     <div class="topbar-email px-2">
                         <i class="fa-solid fa-envelope px-2"></i>
@@ -73,11 +73,11 @@
     <!-- Nav Bar-->
     <div class="navbar-1 container-fluid g-0">
         <div class="row">
-            <div class="navbar-section-1 d-flex col-10 ">
-                <div class="navbar-section-logo d-flex justify-content-center col-4">
+            <div class="navbar-section-1 d-flex col-10">
+                <div class="navbar-section-logo d-flex justify-content-end col-3">
                     <img class="navbar-logo" src="./Assets/images/Brand/logo-bg.png">
                 </div>
-                <div class="navbar-section-reference d-flex justify-content-start col-6">
+                <div class="navbar-section-reference d-flex justify-content-start col-7">
                     <button class="btn btn-nav">Home</button>
                     <button class="btn btn-nav">About</button>
                     <button class="btn btn-nav">Services</button>
@@ -133,7 +133,7 @@
                         <div class="swiper swiper-0">
                             <ul class="card-list swiper-wrapper swiper-0-wrapper">
                                 <li class="card-item images-slides swiper-slide" data-target-text-id="slide1-text">
-                                    <div class="head fs-1 p-2">
+                                    <div class="head p-2">
                                         Life More </br> Relaxed </br> Smart Insurance.
                                     </div>
                                     <div class="desc p-2">
@@ -146,7 +146,7 @@
                                     </div>
                                 </li>
                                 <li class="card-item images-slides swiper-slide" data-target-text-id="slide2-text">
-                                    <div class="head fs-1 p-2">
+                                    <div class="head p-2">
                                         Life </br>Unburdened </br>Secured Insured.
                                     </div>
                                     <div class="desc p-2">
@@ -159,7 +159,7 @@
                                     </div>
                                 </li>
                                 <li class="card-item images-slides swiper-slide" data-target-text-id="slide3-text">
-                                    <div class="head fs-1 p-2">
+                                    <div class="head p-2">
                                         Secure Your </br> Dreams.</br> Insure Your Life.
                                     </div>
                                     <div class="desc p-2">
