changes in footer

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
         <div class="row">
 
             <div class="topbar-section-1 d-flex align-items-center justify-content-end col-10">
-                <div class="topbar-info d-flex justify-content-start col-6">
+                <div class="topbar-info d-flex justify-content-start col-7">
                     <div class="topbar-location px-2">
                         <i class="fa-solid fa-location-dot px-2"></i>
-                        3D Commercial Road Fratton, Australia
+                        30 Commercial Road Fratton, Australia
                     </div>
                     <div class="topbar-email px-2">
                         <i class="fa-solid fa-envelope px-2"></i>
@@ -73,11 +73,11 @@
     <!-- Nav Bar-->
     <div class="navbar-1 container-fluid g-0">
         <div class="row">
-            <div class="navbar-section-1 d-flex col-10 ">
-                <div class="navbar-section-logo d-flex justify-content-center col-4">
+            <div class="navbar-section-1 d-flex col-10">
+                <div class="navbar-section-logo d-flex justify-content-end col-3">
                     <img class="navbar-logo" src="./Assets/images/Brand/logo-bg.png">
                 </div>
-                <div class="navbar-section-reference d-flex justify-content-start col-6">
+                <div class="navbar-section-reference d-flex justify-content-start col-7">
                     <button class="btn btn-nav">Home</button>
                     <button class="btn btn-nav">About</button>
                     <button class="btn btn-nav">Services</button>
@@ -133,7 +133,7 @@
                         <div class="swiper swiper-0">
                             <ul class="card-list swiper-wrapper swiper-0-wrapper">
                                 <li class="card-item images-slides swiper-slide" data-target-text-id="slide1-text">
-                                    <div class="head fs-1 p-2">
+                                    <div class="head p-2">
                                         Life More </br> Relaxed </br> Smart Insurance.
                                     </div>
                                     <div class="desc p-2">
@@ -146,7 +146,7 @@
                                     </div>
                                 </li>
                                 <li class="card-item images-slides swiper-slide" data-target-text-id="slide2-text">
-                                    <div class="head fs-1 p-2">
+                                    <div class="head p-2">
                                         Life </br>Unburdened </br>Secured Insured.
                                     </div>
                                     <div class="desc p-2">
@@ -159,7 +159,7 @@
                                     </div>
                                 </li>
                                 <li class="card-item images-slides swiper-slide" data-target-text-id="slide3-text">
-                                    <div class="head fs-1 p-2">
+                                    <div class="head p-2">
                                         Secure Your </br> Dreams.</br> Insure Your Life.
                                     </div>
                                     <div class="desc p-2">
@@ -1379,15 +1379,15 @@
     <!-- Footer 1-->
     <div class="footer-1">
         <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-3 mx-3">
+            <div class="row justify-content-start ">
+                <div class="col-3">
                     <div class="row-1-title py-2">About</div>
                     <div class="row-1-desc py-2">There are many variation of passages of Lorem Ip
                         available,
                         but the mojority have</div>
                     <div class="row-1-input py-2">
                         <div class="input-group mb-3">
-                            <input type="text" class="form-control row-1-inputfield" placeholder="Email">
+                            <input type="text" class="form-control row-1-inputfield" placeholder="Email Address">
                             <span class="input-group-text input-arrow" id="basic-addon2"><i
                                     class="fa-solid fa-arrow-right"></i></span>
                         </div>
@@ -1410,37 +1410,37 @@
 
                     </div>
                 </div>
-                <div class="col-3 mx-3">
-                    <div class="footer-1-row-2">
-                        <div class="row-2-logo">
-                            <div class="row justify-content-center align-items-center">
-                                <img src="./Assets/images/footer-1/Logo.png">
-                            </div>
-                        </div>
+                <div class="col-4">
+                    <div class="footer-1-row-2 row justify-content-center">
                         <div class="row-2-addressbox">
-                            <div class="row-2-address pb-2 pt-4">
+                            <div class="row-2-logo">
+                                <div class="text-center">
+                                    <img src="./Assets/images/footer-1/Logo.png">
+                                </div>
+                            </div>
+                            <div class="row-2-address pt-4 pb-2 px-4">
                                 <div class="row justify-content-center align-items-center">
                                     <div class="col-2">
                                         <i class="fa-solid fa-globe"></i>
                                     </div>
-                                    <div class="col-6">
+                                    <div class="col-8">
                                         <div class="row">
-                                            <div class="footer-1-row-2-text">
+                                            <div class="row-2-text">
                                                 mitc@example.com
                                             </div>
-                                            <div class="footer-1-row-2-text">
+                                            <div class="row-2-text">
                                                 www.website.com
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                            <div class="row-2-address py-2">
+                            <div class="row-2-address pt-2 pb-4 px-4">
                                 <div class="row justify-content-center align-items-center">
                                     <div class="col-2">
                                         <i class="fa-solid fa-location-dot"></i>
                                     </div>
-                                    <div class="col-6">
+                                    <div class="col-8">
                                         <div class="row">
                                             <div class="row-2-text">
                                                 6391 Elgin St. Delaware </br> New York. USA
@@ -1451,15 +1451,15 @@
                             </div>
                         </div>
                         <div class="row-2-contactbox">
-                            <div class="row-2-address py-2">
+                            <div class="row-2-address py-4 px-4">
                                 <div class="row justify-content-center align-items-center">
                                     <div class="col-2">
                                         <img src="./Assets/images/navbar/call-logo.png" />
                                     </div>
-                                    <div class="col-6">
+                                    <div class="col-8">
                                         <div class="row">
-                                            <div class="row-2-text">
-                                                Contact No.
+                                            <div class="row-2-contact-text">
+                                                Emergency call
                                             </div>
                                             <div class="row-2-contact">
                                                 +92 3800 8060
@@ -1471,7 +1471,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-2 mx-3">
+                <div class="col-2">
                     <div class="row-3-title py-2">Explore</div>
                     <div class="row-3-options">
                         <div class="py-1">
@@ -1491,8 +1491,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-2 mx-3 px-4">
-                    <div class="row-4-title py-2">Gallary</div>
+                <div class="col-3">
+                    <div class=" row-4-title py-2">Gallary</div>
                     <div class="row row-cols-2 g-1">
                         <div class="col gallary-images">
                             <img src="./Assets/images/footer-1/1.png">
