--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                                         have suffered aeration is some form.
                                     </div>
                                     <div class="p-2">
-                                        <button class="btn discover-button border-2 px-4 py-2">Discover
+                                        <button class="btn discover-button rounded-3 px-5 py-3">Discover
                                             More</button>
                                     </div>
                                 </li>
@@ -154,7 +154,7 @@
                                         have suffered aeration is some form.
                                     </div>
                                     <div class="p-2">
-                                        <button class="btn discover-button border-2 px-4 py-2">Discover
+                                        <button class="btn discover-button rounded-3 px-5 py-3">Discover
                                             More</button>
                                     </div>
                                 </li>
@@ -167,7 +167,7 @@
                                         have suffered aeration is some form.
                                     </div>
                                     <div class="p-2">
-                                        <button class="btn discover-button border-2 px-4 py-2">Discover
+                                        <button class="btn discover-button rounded-3 px-5 py-3">Discover
                                             More</button>
                                     </div>
                                 </li>
@@ -205,17 +205,18 @@
         <div class="container">
             <div class="d-flex align-items-center">
                 <div class="col-4">
-                    <div class="card border-0 px-3 py-3">
+                    <div class="card border-0 px-3 py-4">
                         <div class="card-body">
                             <img src="./Assets/images/section-2/card1-icon.png" class="card-img-top my-2" alt="...">
                             <h5 class="card-title py-1">Safe Your Money</h5>
-                            <p class="card-text">There are many variation the off passages of Lorem Ipsum free thing
-                                avagtilable, but majority</p>
+                            <p class="card-text">There are many variations free the off </br>
+                                passages of Lorem Ipsum about to </br>
+                                thing avagtilable, but majority</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-4">
-                    <div class="card border-0 card-center px-3 py-4">
+                    <div class="card border-0 card-center px-3 py-5">
                         <div class="card-body">
                             <img src="./Assets/images/section-2/card2-icon.png" class="card-img-top my-2" alt="...">
                             <h5 class="card-title py-1">Get Free Qoute</h5>
@@ -225,12 +226,13 @@
                     </div>
                 </div>
                 <div class="col-4">
-                    <div class="card border-0 px-3 py-3">
+                    <div class="card border-0 px-3 py-4">
                         <div class="card-body">
                             <img src="./Assets/images/section-2/card3-icon.png" class="card-img-top my-2" alt="...">
                             <h5 class="card-title py-1">Fast & Reliable</h5>
-                            <p class="card-text">There are many variation the off passages of Lorem Ipsum free thing
-                                avagtilable, but majority</p>
+                            <p class="card-text">There are many variations free the off </br>
+                                passages of Lorem Ipsum about to </br>
+                                thing avagtilable, but majority</p>
                         </div>
                     </div>
                 </div>
@@ -251,17 +253,17 @@
                                         class="image rounded-4">
                                 </div>
                                 <div class="col-4">
-                                    <div class="box1 p-4 rounded-4">
-                                        <div class="row text-center">
-                                            <div class="box1-title fs-2">
+                                    <div class="box1 py-4 rounded-5 my-4">
+                                        <div class="row text-center py-4">
+                                            <div class="box1-title">
                                                 <div class="justify-content-center">
                                                     40+
                                                 </div>
                                             </div>
-                                            <div class="box1-text fs-6">
+                                            <div class="box1-text">
                                                 Years of
                                             </div>
-                                            <div class="box1-text fs-6">
+                                            <div class="box1-text">
                                                 Experience
                                             </div>
                                         </div>
@@ -332,7 +334,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="points p-4 my-4">
+                        <div class="points py-5 px-5 my-4">
                             <div class="row">
                                 <div class="point-text align-items-center mx-2 my-1">
                                     Many variation of passages of lorem ipsum
@@ -345,10 +347,10 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="discover-button my-4">
+                        <div class="discover-button mt-4">
                             <div class="row">
-                                <div class="col-4">
-                                    <button class="btn border-2 px-4 py-2">Discover
+                                <div class="col-8">
+                                    <button class="btn rounded-3 px-5 py-3">Discover
                                         More</button>
                                 </div>
                             </div>
